# strawberry-pydantic-test

./: .gitignore  pyproject.toml  schema.graphql
app/: content_types.py  database.py  main.py  models.py  schema.py
tests/: conftest.py  test_api.py
